# n32g031-cmake-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.run/: Run Debug.run.xml
cmake/: toolchain.cmake
ld/: n32g031_flash.ld
sdk/: CMakeLists.txt
src/: main.c  main.h
startup/: startup_n32g031_gcc.s
svd/: N32G031.svd
